# suparock-cloud-architect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yaml
doc_search/: agent.py  main.py  tools.py  utils.py
image_search/: main.py  utils.py
model/: config.py  embedding.py
src/: app.py
src/aws/: agent.py  main.py  tools.py  utils.py  vectorstore.py
src/aws_tool/: agent.py  main.py  tools.py
src/doc_search/: agent.py  main.py  tools.py  utils.py
src/image_search/: main.py  utils.py
src/model/: config.py  embedding.py  supabase_client.py
supabase/: config.toml
supabase/migrations/: 20240713174313_init.sql  20240713194923_web_service.sql  20240713195045_remote_schema.sql
